# CookEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
demo/: CMakeLists.txt  Demo.cpp  Demo.h  main.cpp
engine/: CMakeLists.txt
engine/docs/: RenderDoc_Issue.md
engine/opengl/: GL.h  GLAPITrace.h
engine/src/: CookEngine.cpp  CookEngine.h  InputHandler.cpp  InputHandler.h  ModelLoader.cpp  ModelLoader.h
engine/src/renderer/: Camera.cpp  Camera.h  CommandPool.cpp  CommandPool.h  Device.cpp  Device.h  GPUBuffer.cpp  GPUBuffer.h  Instance.cpp  Instance.h  PhysicalDevice.cpp  PhysicalDevice.h  Pipeline.cpp  Pipeline.h  Queue.cpp  Queue.h  RHI.cpp  RHI.h  RHIBuffer.h  RHIImage.h  RenderGraph.cpp  RenderGraph.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShaderLoader.cpp  ShaderLoader.h  Surface.cpp  Surface.h  Swapchain.cpp  Swapchain.h  VmaUsage.cpp  VmaUsage.h  VulkanAllocator.cpp  VulkanAllocator.h
engine/src/renderer/shaders/: triangle.frag.hlsl  triangle.vert.hlsl  trianglePS.hlsl  trianglePS.spv  triangleVS.hlsl  triangleVS.spv
engine/src/utils/: GeometryPrimitives.h  MathUsage.h  Mesh.h  Model.h  Timer.cpp  Timer.h  Transform.h
engine/src/window/: Window.cpp  Window.h
opengl/: GLAPI.h
src/: main.cpp
